@@ -1,62 +1,19 @@
-Cody Lin
-Kelly Liu
-
-Conventions: allman style
-
 #######################
-Starter Webapp - Quotes
-#######################
+XML Timetable
+####################### 
+ACIT 4850 lab 09
 
-This is the starter webapp for Tutorial ci-normal01
+### Team Members
 
-It is purposefully broken.
+* Cody Lin
+* Kelly Liu
+* Karl Wong
 
-**************
-Intended Usage
-**************
+### Base Requirements:
+* CodeIgniter Framework in `../system3/` folder
 
-Fork this project.
-Clone it locally.
-Create a "develop" branch based on "master".
-Fix it per tutorial "normal01".
-
-***************
-Project Folders
-***************
-
-/application    the obvious
-/assets         CSS, javascript & media
-/data           some pictures to use
-
-Assumed: CI system folder is in ../system3
-
-If you change the system folder configuration setting, your webapp will break
-when I try to test it on my system!
-
-*******
-License
-*******
-
-Please see the `license
-agreement <https://codeigniter.com/userguide3/license.html>`_
-
-*********
-Resources
-*********
-
--  `Informational website <https://codeigniter.com/>`_
--  `Source code repo <https://github.com/bcit-ci/CodeIgniter/>`_
--  `User Guide <https://codeigniter.com/userguide3/>`_
--  `Community Forums <https://forum.codeigniter.com/>`_
--  `Community Wiki <https://github.com/bcit-ci/CodeIgniter/wiki/>`_
--  `Community IRC <https://codeigniter.com/irc>`_
-
-***************
-Acknowledgement
-***************
-
-This webapp was written by James Parry, Instructor in Computer Systems
-Technology at the British Columbia Institute of Technology,
-and Project Lead for CodeIgniter.
-
-CodeIgniter is a project of B.C.I.T.
+### Assumptions:
+* Camel-case naming convention
+* Allman-style formatting
+* changelog to have newest timestamp first
+* use date & time stamping of [YYYY-MM-DD HH:MM - comment]
